<resources>
    <string name="app_name">Simple Running Log</string>
    <string name="new_Entry_Title_Text">TITLE</string>
    <string name="new_EntryDateText">DATE</string>
    <string name="newEntryTypeText">TYPE</string>
    <string name="newEntrySurfaceText">SURFACE</string>
    <string name="runTitleHintText">Insert Run Title Here</string>
    <string name="distanceNewEntry">DISTANCE</string>
    <string name="buttonDateText">PRESS TO SELECT DATE</string>
    <string name="newEntryTotalTime">ELAPSED TIME</string>
    <string name="distanceButtonText">0.00 mi</string>
    <string-array name="runTypes">
        <item>Easy</item>
        <item>Long</item>
        <item>Threshold</item>
        <item>Tempo</item>
        <item>Interval</item>
        <item>Race</item>
    </string-array>
    <string-array name="surfaceTypes">
        <item>Road</item>
        <item>Track</item>
        <item>Treadmill</item>
        <item>Trail</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="dateProto">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_main">Simple Run Log</string>
    <string name="delete_run">Delete Run</string>
    <string name="save_run">SAVE RUN</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_single_day_viewer">Single Day Selector</string>
    <string name="update_run">UPDATE RUN</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
</resources>
